--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "bulma": "^0.9.2",
     "core-js": "^3.9.1",
     "jsonwebtoken": "^8.5.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "qs": "^6.10.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
