--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bulma": "^0.9.2",
     "core-js": "^3.9.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "nuxt": "^2.15.3",
     "qs": "^6.10.1"
   },
