--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.7.0",
     "node-sass": "^5.0.0",
+    "nuxt-twa-module": "^1.3.1",
     "sass-loader": "^10.1.1"
   }
 }
