--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/pwa": "^3.3.5",
+    "@walletconnect/web3-provider": "^1.4.1",
     "bulma": "^0.9.2",
     "core-js": "^3.9.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "nuxt": "^2.15.3",
-    "qs": "^6.10.1"
+    "qs": "^6.10.1",
+    "web3": "^1.3.6"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
