--- a/.env.production
+++ b/.env.production
@@ -6,7 +6,9 @@ NUXT_ENV_BLOCKCHAIN_UPDATE_RATE=15000
 NUXT_ENV_BSC_NETWORK_ID=56
 NUXT_ENV_BSC_HEX_ID=0x38
 NUXT_ENV_CHAIN_NAME=Binance Smart Chain Network
+NUXT_ENV_NETWORK_TYPE=Mainnet
 NUXT_ENV_TOKEN_NAME=Binance Coin
 NUXT_ENV_TOKEN_SYMBOL=BNB
 NUXT_ENV_BSC_RPC=https://bsc-dataseed.binance.org
 NUXT_ENV_BLOCKEXPLORER=https://bscscan.com
+NUXT_ENV_BRIDGE=https://cryptono.de
