--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "@walletconnect/web3-provider": "^1.4.1",
     "bulma": "^0.9.2",
     "core-js": "^3.9.1",
+    "eos-transit": "^4.0.7",
+    "eos-transit-anchorlink-provider": "^4.0.7",
+    "eos-transit-lynx-provider": "^4.0.7",
+    "eos-transit-scatter-provider": "^4.0.7",
+    "eos-transit-tokenpocket-provider": "^4.0.7",
+    "eosjs": "^22.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "nuxt": "^2.15.3",
