--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "web3": "^1.3.6"
   },
   "devDependencies": {
+    "@effectai/effect-js": "0.0.7",
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/moment": "^1.6.1",
