--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/pwa": "^3.3.5",
     "@walletconnect/web3-provider": "^1.4.1",
+    "async-retry": "^1.3.3",
     "bulma": "^0.9.2",
     "core-js": "^3.9.1",
     "eos-transit": "^4.0.7",
