--- a/.env.development
+++ b/.env.development
@@ -19,3 +19,4 @@ NUXT_ENV_EOS_EFX_TOKEN=UTL
 NUXT_ENV_EOS_TOKEN_CONTRACT=tokenonkylin
 NUXT_ENV_EOS_NETWORK=kylin
 NUXT_ENV_EOS_RELAYER_PRIV_KEY=5JtUScZK2XEp3g9gh7F8bwtPTRAkASmNrrftmx4AxDKD5K4zDnr
+NUXT_ENV_EOS_FORCE_CONTRACT=forceonkylin
