--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@creativebulma/bulma-badge": "^1.0.1",
+    "@creativebulma/bulma-tooltip": "^1.2.0",
     "@effectai/effect-js": "0.0.11",
     "@nuxtjs/auth-next": "^5.0.0-1624817847.21691f1",
     "@nuxtjs/axios": "^5.13.1",
