--- a/.env.production
+++ b/.env.production
@@ -17,3 +17,6 @@ NUXT_ENV_EOS_NODE_URL=eos.greymass.com
 NUXT_ENV_EOS_EXPLORER_URL=https://bloks.io
 NUXT_ENV_EOS_EFX_TOKEN=EFX
 NUXT_ENV_EOS_TOKEN_CONTRACT=effecttokens
+NUXT_ENV_EOS_NETWORK=mainnet
+NUXT_ENV_EOS_FORCE_CONTRACT=force.efx
+NUXT_ENV_IPFS_EXPLORER=https://ipfs.effect.ai
