Add contract address , Add getBscEfxBalance, implement in getAccountBalance

--- a/.env.development
+++ b/.env.development
@@ -20,3 +20,5 @@ NUXT_ENV_EOS_TOKEN_CONTRACT=tokenonkylin
 NUXT_ENV_EOS_NETWORK=kylin
 NUXT_ENV_EOS_FORCE_CONTRACT=forceonkylin
 NUXT_ENV_IPFS_EXPLORER=https://ipfs.effect.ai
+
+NUXT_ENV_BSC_EFX_TOKEN_CONTRACT=0xC51Ef828319b131B595b7ec4B28210eCf4d05aD0
