--- a/.env.development
+++ b/.env.development
@@ -20,3 +20,4 @@ NUXT_ENV_EOS_TOKEN_CONTRACT=tokenonkylin
 NUXT_ENV_EOS_NETWORK=kylin
 NUXT_ENV_EOS_FORCE_CONTRACT=forceonkylin
 NUXT_ENV_IPFS_EXPLORER=https://ipfs.effect.ai
+NUXT_ENV_IPFS_NODE=https://ipfs.effect.ai
