--- a/.env.production
+++ b/.env.production
@@ -20,3 +20,4 @@ NUXT_ENV_EOS_TOKEN_CONTRACT=effecttokens
 NUXT_ENV_EOS_NETWORK=mainnet
 NUXT_ENV_EOS_FORCE_CONTRACT=force.efx
 NUXT_ENV_IPFS_EXPLORER=https://ipfs.effect.ai
+NUXT_ENV_IPFS_NODE=https://ipfs.effect.ai
