--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@effectai/effect-js": "0.0.11",
     "@nuxtjs/auth-next": "^5.0.0-1624817847.21691f1",
     "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@walletconnect/web3-provider": "^1.4.1",
     "async-retry": "^1.3.3",
