--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.21",
     "nuxt": "^2.15.3",
     "qs": "^6.10.1",
+    "vuex-persist": "^3.1.3",
     "web3": "^1.3.6"
   },
   "devDependencies": {
