--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "lodash": "^4.17.21",
     "nuxt": "^2.15.3",
     "qs": "^6.10.1",
-    "vuex-persist": "^3.1.3",
-    "vue-simplemde": "^2.0.0",
+    "sass": "^1.43.4",
     "vue-carousel": "^0.18.0",
+    "vue-simplemde": "^2.0.0",
+    "vuex-persist": "^3.1.3",
     "web3": "^1.3.6"
   },
   "devDependencies": {
@@ -47,7 +48,6 @@
     "eslint": "^7.22.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.7.0",
-    "node-sass": "^5.0.0",
     "nuxt-twa-module": "^1.3.1",
     "sass-loader": "^10.1.1"
   }
