--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.21",
     "nuxt": "^2.15.3",
     "qs": "^6.10.1",
+    "sanitize-html": "^2.5.3",
     "vue-carousel": "^0.18.0",
     "vue-simplemde": "^2.0.0",
     "vuex-persist": "^3.1.3",
@@ -45,10 +46,10 @@
     "babel-eslint": "^10.1.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
-    "sass": "~1.32.12",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.7.0",
     "nuxt-twa-module": "^1.3.1",
+    "sass": "~1.32.12",
     "sass-loader": "^10.1.1"
   }
 }
