--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "qs": "^6.10.1",
     "sanitize-html": "^2.5.3",
     "vue-carousel": "^0.18.0",
-    "vue-simplemde": "^2.0.0",
+    "vue-quill-editor": "^3.0.6",
     "vuex-persist": "^3.1.3",
     "web3": "^1.3.6"
   },
