Add local .env variables

--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,8 @@ NUXT_ENV_BACKEND_URL=http://localhost:4123
 
 NUXT_ENV_BLOCKCHAIN_UPDATE_RATE=15000
 
+NUXT_ENV_SDK_ENV=mainnet
+
 NUXT_ENV_BSC_NETWORK_ID=56
 NUXT_ENV_BSC_HEX_ID=0x38
 NUXT_ENV_BSC_CHAIN_NAME=Binance Smart Chain Network
