--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "qs": "^6.10.1",
     "sanitize-html": "^2.5.3",
     "vue-carousel": "^0.18.0",
+    "vue-codemirror": "^4.0.6",
     "vue-simplemde": "^1.1.2",
     "vuex-persist": "^3.1.3",
     "web3": "^1.3.6"
