--- a/.env.development
+++ b/.env.development
@@ -33,6 +33,7 @@ NUXT_ENV_EOS_EFX_TOKEN=EFX
 NUXT_ENV_EOS_TOKEN_CONTRACT=efxtoken1112
 NUXT_ENV_EOS_NETWORK=jungle
 NUXT_ENV_EOS_FORCE_CONTRACT=efxforce1112
+NUXT_ENV_EOS_FORCE_VACCOUNT_ID=333
 NUXT_ENV_IPFS_EXPLORER=https://ipfs.effect.ai
 NUXT_ENV_IPFS_NODE=https://ipfs.effect.ai
 
