--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "async-retry": "^1.3.3",
     "axios": "^0.24.0",
     "bulma": "^0.9.2",
+    "bulma-switch": "^2.0.4",
     "core-js": "^3.9.1",
     "eos-transit": "^4.0.7",
     "eos-transit-anchorlink-provider": "^4.0.7",
