--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,7 @@ NUXT_ENV_BACKEND_URL=http://localhost:4123
 
 NUXT_ENV_USER_UPDATE_RATE=20000
 NUXT_ENV_FORCE_UPDATE_RATE=60000
+NUXT_ENV_TEMPLATE_UPDATE_RATE=900000
 
 NUXT_ENV_BSC_NETWORK_ID=56
 NUXT_ENV_BSC_HEX_ID=0x38
