--- a/.env.local.development
+++ b/.env.local.development
@@ -1,6 +1,7 @@
 NUXT_ENV_BACKEND_URL=http://localhost:4123
 NUXT_ENV_USER_UPDATE_RATE=20000
 NUXT_ENV_FORCE_UPDATE_RATE=60000
+NUXT_ENV_TEMPLATE_UPDATE_RATE=900000
 NUXT_ENV_BSC_EFX_TOKEN_CONTRACT=0xC51Ef828319b131B595b7ec4B28210eCf4d05aD0
 
 
