--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nuxt": "^2.15.3",
     "qs": "^6.10.1",
     "sanitize-html": "^2.5.3",
+    "splitpanes": "^2.4.1",
     "vue-carousel": "^0.18.0",
     "vue-codemirror": "^4.0.6",
     "vue-simplemde": "^1.1.2",
