--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,7 @@ NUXT_ENV_BACKEND_URL=http://localhost:4123
 
 NUXT_ENV_USER_UPDATE_RATE=20000
 NUXT_ENV_FORCE_UPDATE_RATE=60000
+NUXT_ENV_TEMPLATE_UPDATE_RATE=900000
 
 NUXT_ENV_SDK_ENV=mainnet
 
@@ -22,6 +23,7 @@ NUXT_ENV_EOS_EFX_TOKEN=EFX
 NUXT_ENV_EOS_TOKEN_CONTRACT=efxtoken1112
 NUXT_ENV_EOS_NETWORK=jungle
 NUXT_ENV_EOS_FORCE_CONTRACT=efxforce1111
+NUXT_ENV_EOS_FORCE_VACCOUNT_ID=66
 NUXT_ENV_IPFS_EXPLORER=https://ipfs.effect.ai
 NUXT_ENV_IPFS_NODE=https://ipfs.effect.ai
 
