--- a/.env.local.development
+++ b/.env.local.development
@@ -1,4 +1,6 @@
 NUXT_ENV_BACKEND_URL=http://localhost:4123
+NUXT_ENV_ALTERNATIVE_FRONTEND=http://localhost:3000
+
 NUXT_ENV_USER_UPDATE_RATE=20000
 NUXT_ENV_FORCE_UPDATE_RATE=60000
 NUXT_ENV_TEMPLATE_UPDATE_RATE=900000
