--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 NUXT_ENV_BACKEND_URL=http://localhost:4123
+NUXT_ENV_ALTERNATIVE_FRONTEND=https://effectai.github.io/force-frontend-new
 
 NUXT_ENV_USER_UPDATE_RATE=20000
 NUXT_ENV_FORCE_UPDATE_RATE=60000
