update config and add relayer

--- a/.env.development
+++ b/.env.development
@@ -23,6 +23,7 @@ NUXT_ENV_BRIDGE=https://cryptono.de
 #NUXT_ENV_EOS_TOKEN_CONTRACT=effect.token
 #NUXT_ENV_EOS_NETWORK=local
 #NUXT_ENV_EOS_FORCE_CONTRACT=effect.force
+#NUXT_ENV_EOS_RELAYER_CONTRACT=efxrelayer11
 #NUXT_ENV_IPFS_EXPLORER=https://ipfs.effect.ai
 #NUXT_ENV_IPFS_NODE=https://ipfs.effect.ai
 
@@ -33,8 +34,9 @@ NUXT_ENV_EOS_NODE_URL=jungle3.greymass.com
 NUXT_ENV_EOS_EXPLORER_URL=https://jungle3.bloks.io
 NUXT_ENV_EOS_EFX_TOKEN=EFX
 NUXT_ENV_EOS_TOKEN_CONTRACT=efxtoken1112
-NUXT_ENV_EOS_NETWORK=jungle
 NUXT_ENV_EOS_FORCE_CONTRACT=efxforce1112
+NUXT_ENV_EOS_RELAYER_CONTRACT=efxrelayer11
+NUXT_ENV_EOS_NETWORK=jungle
 NUXT_ENV_EOS_FORCE_VACCOUNT_ID=333
 NUXT_ENV_IPFS_EXPLORER=https://ipfs.effect.ai
 NUXT_ENV_IPFS_NODE=https://ipfs.effect.ai
