--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -3,7 +3,11 @@ name: Deploy on gh-pages
 on:
   push:
     branches:
-      - 'ci-test'
+      - main
+
+env:
+  ## Sets environment variable
+  APP_ENV: testnet
 
 jobs:
   deploy:
@@ -27,3 +31,8 @@ jobs:
       - run: npm ci
       - run: npm run generate
 
+      - name: deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
