--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "splitpanes": "^2.4.1",
     "vue-carousel": "^0.18.0",
     "vue-codemirror": "^4.0.6",
+    "vue-multiselect": "^2.1.6",
     "vue-simplemde": "^1.1.2",
     "vuex-persist": "^3.1.3",
     "web3": "^1.3.6"
