--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^0.24.0",
     "bulma": "^0.9.2",
     "bulma-switch": "^2.0.4",
+    "bulma-toast": "^2.4.1",
     "core-js": "^3.9.1",
     "eos-transit": "^4.0.7",
     "eos-transit-anchorlink-provider": "^4.0.7",
