--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "vue-carousel": "^0.18.0",
     "vue-codemirror": "^4.0.6",
     "vue-multiselect": "^2.1.6",
+    "vue-select": "^3.20.0",
     "vue-simplemde": "^1.1.2",
     "vuex-persist": "^3.1.3",
     "web3": "^1.3.6"
