--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "async-retry": "^1.3.3",
     "axios": "^0.24.0",
     "bulma": "^0.9.2",
+    "bulma-checkbox": "^1.2.1",
     "bulma-switch": "^2.0.4",
     "bulma-toast": "^2.4.1",
     "core-js": "^3.9.1",
