--- a/approvedCampaigns.json
+++ b/approvedCampaigns.json
@@ -1,4 +1,4 @@
 {
-    "campaigns": [1, 4, 5, 6, 7, 8],
+    "campaigns": [1, 4, 5, 6, 7, 8, 25],
     "requesters": ["efxqualifier", "efxtaskproxy"]
 }
