--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-NUXT_ENV_ALTERNATIVE_FRONTEND=https://effectai.github.io/force-frontend-new
+NUXT_ENV_ALTERNATIVE_FRONTEND=https://effectai.github.io/force-frontend
 
 NUXT_ENV_USER_UPDATE_RATE=20000
 NUXT_ENV_FORCE_UPDATE_RATE=60000
