update .env files

--- a/.env.testnet
+++ b/.env.testnet
@@ -5,5 +5,7 @@ NUXT_ENV_FORCE_UPDATE_RATE=60000
 NUXT_ENV_TEMPLATE_UPDATE_RATE=900000
 
 NUXT_ENV_SDK_ENV=jungle4
+NUXT_ENV_DEFAULT_EX_QUALIS=137, # CSV list
+NUXT_ENV_DEFAULT_IN_QUALIS=118, # CSV list
 
 NUXT_ENV_BACKEND_URL=https://worker.acc.effect.ai
