--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,11 +1,11 @@
 # Dockerfile
-FROM oven/bun:latest
+FROM oven/bun:1.0
 
 # Create app directory
-WORKDIR /app
+WORKDIR /nuxt
 
 # Install app dependencies
-# COPY package*.json ./
+COPY package*.json ./
 COPY bun.lockb ./
 RUN bun install
 
@@ -13,6 +13,11 @@ RUN bun install
 COPY . .
 
 # Expose port and start app
-EXPOSE 3000
+ENV NITRO_HOST=0.0.0.0
+ENV NITRO_PORT=3000
+
+# EXPOSE 3000
+# EXPOSE 24678
+
 # CMD [ "npm", "run", "prod" ]
 CMD [ "bun", "run", "dev" ]
