--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,13 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: ./Dockerfile.dev
     volumes:
-      - .:/app
-      - /app/node_modules
+      - .:/nuxt
+      - /nuxt/node_modules
     ports:
       - 3000:3000
+      - 24678:24678
     environment:
       HOST: 0.0.0.0
+      NITRO_PORT: 3000
