--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "Effect-Force",
+  "name": "effect-force",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --host",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^0.8.3",
+    "@nuxt/image": "^0.7.1",
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "@vueuse/core": "^10.4.1",
+    "@vueuse/nuxt": "^10.4.1",
     "nuxt": "^3.7.2"
+  },
+  "dependencies": {
+    "@effectai/effect-js": "0.3.44",
+    "@wharfkit/session": "^1.0.0",
+    "@wharfkit/wallet-plugin-anchor": "^1.0.0",
+    "@wharfkit/wallet-plugin-cleos": "^1.0.0",
+    "@wharfkit/wallet-plugin-scatter": "^1.0.2",
+    "@wharfkit/wallet-plugin-tokenpocket": "^1.0.2",
+    "@wharfkit/wallet-plugin-wombat": "^1.0.2",
+    "@wharfkit/web-renderer": "^1.0.3"
   }
 }
