--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^0.8.3",
-    "@nuxt/image": "^0.7.1",
+    "@nuxt/image": "rc",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
+    "daisyui": "latest",
     "nuxt": "^3.7.2"
   },
   "dependencies": {
@@ -25,7 +26,6 @@
     "@wharfkit/wallet-plugin-scatter": "^1.0.2",
     "@wharfkit/wallet-plugin-tokenpocket": "^1.0.2",
     "@wharfkit/wallet-plugin-wombat": "^1.0.2",
-    "@wharfkit/web-renderer": "^1.0.3",
-    "daisyui": "latest"
+    "@wharfkit/web-renderer": "^1.0.3"
   }
 }
