updat .vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,23 +3,23 @@
         "main"
     ],
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#423bba",
-        "activityBar.background": "#423bba",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#c95c56",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#423bba",
-        "statusBar.background": "#342f93",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#423bba",
-        "statusBarItem.remoteBackground": "#342f93",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#342f93",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#342f9399",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "activityBar.activeBackground": "#94f4ab",
+        "activityBar.background": "#94f4ab",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#a48bf3",
+        "activityBarBadge.foreground": "#15202b",
+        "commandCenter.border": "#15202b99",
+        "sash.hoverBorder": "#94f4ab",
+        "statusBar.background": "#66ef86",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#38ea61",
+        "statusBarItem.remoteBackground": "#66ef86",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#66ef86",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#66ef8699",
+        "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#342f93"
+    "peacock.color": "#66ef86"
 }
