--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@vueuse/nuxt": "^10.4.1",
     "daisyui": "latest",
     "nuxt": "^3.7.3",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "vls": "^0.8.5"
   },
   "dependencies": {
     "@effectai/effect-js": "0.3.56",
