--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^0.8.3",
-    "@nuxt/image": "rc",
-    "@nuxtjs/tailwindcss": "^6.8.0",
+    "@nuxt/image": "1.4.0",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
+    "autoprefixer": "^10.4.19",
     "daisyui": "latest",
-    "nuxt": "^3.7.3",
+    "nuxt": "^3.11.1",
+    "postcss": "^8.4.38",
+    "sass": "^1.72.0",
     "sharp": "^0.32.5",
+    "tailwindcss": "^3.4.1",
     "vls": "^0.8.5"
   },
   "dependencies": {
