--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@effectai/effect-js": "0.3.56",
+    "@tanstack/vue-query": "^5.28.7",
     "@types/node": "^20.6.0",
     "@wharfkit/session": "^1.0.0",
     "@wharfkit/wallet-plugin-anchor": "^1.0.0",
