--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@nuxt/image": "1.4.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
     "autoprefixer": "^10.4.19",
