--- a/package.json
+++ b/package.json
@@ -10,21 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/image": "1.4.0",
-    "@tailwindcss/typography": "^0.5.10",
-    "@vueuse/core": "^10.4.1",
-    "@vueuse/nuxt": "^10.4.1",
-    "autoprefixer": "^10.4.19",
-    "daisyui": "latest",
     "nuxt": "^3.11.1",
+    "@nuxt/image": "1.4.0",
+    "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "sass": "^1.72.0",
     "sharp": "^0.32.5",
-    "tailwindcss": "^3.4.1",
     "vls": "^0.8.5"
   },
   "dependencies": {
     "@effectai/effect-js": "0.3.56",
+    "@vueuse/nuxt": "^10.4.1",
+    "@vueuse/core": "^10.4.1",
+    "@nuxt/ui": "^2.14.2",
     "@tanstack/vue-query": "^5.28.7",
     "@types/node": "^20.6.0",
     "@wharfkit/session": "^1.0.0",
