--- a/package.json
+++ b/package.json
@@ -10,21 +10,28 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.11.1",
-    "@nuxt/image": "1.4.0",
-    "autoprefixer": "^10.4.19",
+    "normalize.css": "^8.0.1",
     "postcss": "^8.4.38",
-    "sass": "^1.72.0",
-    "sharp": "^0.32.5",
-    "vls": "^0.8.5"
+    "postcss-html": "1.6.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
+    "stylelint": "^16.2.1",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-recess-order": "^4.4.0",
+    "stylelint-config-recommended": "^14.0.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-prettier": "^5.0.0",
+    "vite-plugin-stylelint": "^5.3.1"
   },
   "dependencies": {
+    "nuxt": "^3.11.1",
+    "@nuxt/image": "1.4.0",
     "@effectai/effect-js": "0.3.56",
-    "@vueuse/nuxt": "^10.4.1",
-    "@vueuse/core": "^10.4.1",
     "@nuxt/ui": "^2.14.2",
     "@tanstack/vue-query": "^5.28.7",
     "@types/node": "^20.6.0",
+    "@vueuse/core": "^10.4.1",
+    "@vueuse/nuxt": "^10.4.1",
     "@wharfkit/session": "^1.0.0",
     "@wharfkit/wallet-plugin-anchor": "^1.0.0",
     "@wharfkit/wallet-plugin-cleos": "^1.0.0",
