--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "dev": "nuxt dev --host",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "devDependencies": {
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.38",
     "postcss-html": "1.6.0",
-    "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
+    "eslint": "^8.57.0",
+    "@nuxt/eslint-config": "^0.2.0",
     "stylelint": "^16.2.1",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-recess-order": "^4.4.0",
@@ -24,20 +26,20 @@
     "vite-plugin-stylelint": "^5.3.1"
   },
   "dependencies": {
-    "nuxt": "^3.11.1",
-    "@nuxt/image": "1.4.0",
     "@effectai/effect-js": "0.3.56",
+    "@nuxt/image": "1.4.0",
     "@nuxt/ui": "^2.14.2",
     "@tanstack/vue-query": "^5.28.7",
     "@types/node": "^20.6.0",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
-    "@wharfkit/session": "^1.0.0",
+    "@wharfkit/session": "^1.2.8",
     "@wharfkit/wallet-plugin-anchor": "^1.0.0",
     "@wharfkit/wallet-plugin-cleos": "^1.0.0",
     "@wharfkit/wallet-plugin-scatter": "^1.0.2",
     "@wharfkit/wallet-plugin-tokenpocket": "^1.0.2",
     "@wharfkit/wallet-plugin-wombat": "^1.0.2",
-    "@wharfkit/web-renderer": "^1.0.3"
+    "@wharfkit/web-renderer": "^1.0.3",
+    "nuxt": "^3.11.1"
   }
 }
