--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "devDependencies": {
+    "@nuxt/eslint-config": "^0.2.0",
+    "eslint": "^8.57.0",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.38",
     "postcss-html": "1.6.0",
     "prettier": "^3.2.5",
-    "eslint": "^8.57.0",
-    "@nuxt/eslint-config": "^0.2.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "stylelint": "^16.2.1",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-recess-order": "^4.4.0",
     "stylelint-config-recommended": "^14.0.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-prettier": "^5.0.0",
+    "vite-plugin-inspect": "^0.8.3",
     "vite-plugin-stylelint": "^5.3.1"
   },
   "dependencies": {
