--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
     "eslint": "^8.57.0",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "16.3.0",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.38",
     "postcss-html": "1.6.0",
-    "prettier": "^3.2.5",
     "rollup-plugin-visualizer": "^5.12.0",
     "stylelint": "^16.2.1",
     "stylelint-config-html": "^1.1.0",
