--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,6 +7,7 @@
         "stylelint-prettier/recommended"
     ],
     "rules": {
+        "no-descending-specificity": null,
         "at-rule-no-unknown": null
     }
 }
