--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-BASE_EXPLORER_URL = 'https://bloks.io/'
+BASE_EXPLORER_URL = 'https://bloks.io'
+ALTERNATIVE_FRONTEND_URL = 'https://effectai.github.io/force-frontend'
