optimize campaign overview page

--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@nuxt/content": "^2.12.1",
     "@nuxt/image": "1.4.0",
     "@nuxt/ui": "^2.14.2",
-    "@tanstack/vue-query": "^5.28.7",
+    "@tanstack/query-persist-client-core": "^5.29.0",
+    "@tanstack/vue-query": "^5.29.0",
     "@types/node": "^20.6.0",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
     "@wharfkit/session": "^1.2.8",
+    "@wharfkit/transact-plugin-autocorrect": "^1.1.1",
     "@wharfkit/wallet-plugin-anchor": "^1.0.0",
     "@wharfkit/wallet-plugin-cleos": "^1.0.0",
     "@wharfkit/wallet-plugin-scatter": "^1.0.2",
