--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 # COPY THIS FILE AND RENAME IT TO .env AND FILL IN THE VALUES
 # BASE_EXPLORER_URL = 'https://jungle4.eosq.eosnation.io/'
+# CAMPAIGN_CACHE_DURATION_MS = '600000'
