--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # COPY THIS FILE AND RENAME IT TO .env AND FILL IN THE VALUES
 # BASE_EXPLORER_URL = 'https://jungle4.eosq.eosnation.io/'
 # CAMPAIGN_CACHE_DURATION_MS = '600000'
+# REQUIRE_ACCESS_KEY = 'false'
