--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 BASE_EXPLORER_URL = 'https://bloks.io'
 ALTERNATIVE_FRONTEND_URL = 'https://effectai.github.io/force-frontend'
+REQUIRE_ACCESS_KEY = 'true'
