--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # COPY THIS FILE AND RENAME IT TO .env AND FILL IN THE VALUES
 # BASE_EXPLORER_URL = 'https://jungle4.eosq.eosnation.io/'
 # CAMPAIGN_CACHE_DURATION_MS = '600000'
-# REQUIRE_ACCESS_KEY = 'false'
+# set to 'false' to disable access key requirement
+EARLY_ALPHA_ACCESS_TEMPLATE_ID = 'false'
