--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 BASE_EXPLORER_URL = 'https://bloks.io'
 ALTERNATIVE_FRONTEND_URL = 'https://effectai.github.io/force-frontend'
-REQUIRE_ACCESS_KEY = 'true'
+# set to 'false' to disable access key requirement
+EARLY_ALPHA_ACCESS_TEMPLATE_ID = '11437'
