tweak access flow, remove unused mods

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
 # COPY THIS FILE AND RENAME IT TO .env AND FILL IN THE VALUES
-# BASE_EXPLORER_URL = 'https://jungle4.eosq.eosnation.io/'
-# CAMPAIGN_CACHE_DURATION_MS = '600000'
+
+# RPC endpoint for the blockchain
+BASE_EXPLORER_URL = 'https://jungle4.eosq.eosnation.io/'
+
+# Duration in milliseconds to cache the campaign data
+CAMPAIGN_CACHE_DURATION_MS = '600000'
+
 # set to 'false' to disable access key requirement
 EARLY_ALPHA_ACCESS_TEMPLATE_ID = 'false'
+
+#comma seperated list of authorized requesters 
+AUTHORIZED_REQUESTERS = 'eosnationftw,efxefxefxefx'
