--- a/package.json
+++ b/package.json
@@ -27,23 +27,22 @@
 		"vite-plugin-stylelint": "^5.3.1"
 	},
 	"dependencies": {
+		"nuxt": "^3.11.1",
 		"@effectai/effect-js": "0.3.56",
 		"@nuxt/content": "^2.12.1",
 		"@nuxt/image": "1.4.0",
-		"@nuxt/ui": "^2.14.2",
 		"@tanstack/query-persist-client-core": "^5.29.0",
 		"@tanstack/vue-query": "^5.29.0",
 		"@types/node": "^20.6.0",
-		"@vueuse/core": "^10.4.1",
 		"@vueuse/nuxt": "^10.4.1",
 		"@wharfkit/session": "^1.2.8",
 		"@wharfkit/transact-plugin-autocorrect": "^1.2.0",
 		"@wharfkit/wallet-plugin-anchor": "^1.0.0",
 		"@wharfkit/wallet-plugin-cleos": "^1.0.0",
+		"@wharfkit/wallet-plugin-privatekey": "^1.1.0",
 		"@wharfkit/wallet-plugin-scatter": "^1.0.2",
 		"@wharfkit/wallet-plugin-tokenpocket": "^1.0.2",
 		"@wharfkit/wallet-plugin-wombat": "^1.0.2",
-		"@wharfkit/web-renderer": "^1.0.3",
-		"nuxt": "^3.11.1"
+		"@wharfkit/web-renderer": "^1.0.3"
 	}
 }
