fix: rename sdk package imports

--- a/package.json
+++ b/package.json
@@ -1,49 +1,49 @@
 {
-  "name": "effect-force",
-  "version": "2.0.0",
-  "private": true,
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev --host",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "lint": "bun biome lint --apply .",
-    "format": "biome format --write .",
-    "check": "bun biome check --apply ."
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.7.0",
-    "normalize.css": "^8.0.1",
-    "postcss": "^8.4.38",
-    "postcss-html": "1.6.0",
-    "rollup-plugin-visualizer": "^5.12.0",
-    "stylelint": "^16.2.1",
-    "stylelint-config-html": "^1.1.0",
-    "stylelint-config-recess-order": "^4.4.0",
-    "stylelint-config-recommended": "^14.0.0",
-    "stylelint-config-recommended-vue": "^1.5.0",
-    "stylelint-prettier": "^5.0.0",
-    "vite-plugin-inspect": "^0.8.3",
-    "vite-plugin-stylelint": "^5.3.1"
-  },
-  "dependencies": {
-    "@effectai/effect-js": "0.3.56",
-    "@nuxt/content": "^2.12.1",
-    "@nuxt/image": "1.4.0",
-    "@tanstack/query-persist-client-core": "^5.29.0",
-    "@tanstack/vue-query": "^5.29.0",
-    "@types/node": "^20.6.0",
-    "@vueuse/nuxt": "^10.4.1",
-    "@wharfkit/session": "^1.2.8",
-    "@wharfkit/transact-plugin-autocorrect": "^1.2.0",
-    "@wharfkit/wallet-plugin-anchor": "^1.0.0",
-    "@wharfkit/wallet-plugin-cleos": "^1.0.0",
-    "@wharfkit/wallet-plugin-privatekey": "^1.1.0",
-    "@wharfkit/wallet-plugin-scatter": "^1.0.2",
-    "@wharfkit/wallet-plugin-tokenpocket": "^1.0.2",
-    "@wharfkit/wallet-plugin-wombat": "^1.0.2",
-    "@wharfkit/web-renderer": "^1.0.3",
-    "nuxt": "^3.11.1",
-    "vue-final-modal": "^4.5.4"
-  }
+	"name": "effect-force",
+	"version": "2.0.0",
+	"private": true,
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev --host",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"lint": "bun biome lint --apply .",
+		"format": "biome format --write .",
+		"check": "bun biome check --apply ."
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.7.0",
+		"normalize.css": "^8.0.1",
+		"postcss": "^8.4.38",
+		"postcss-html": "1.6.0",
+		"rollup-plugin-visualizer": "^5.12.0",
+		"stylelint": "^16.2.1",
+		"stylelint-config-html": "^1.1.0",
+		"stylelint-config-recess-order": "^4.4.0",
+		"stylelint-config-recommended": "^14.0.0",
+		"stylelint-config-recommended-vue": "^1.5.0",
+		"stylelint-prettier": "^5.0.0",
+		"vite-plugin-inspect": "^0.8.3",
+		"vite-plugin-stylelint": "^5.3.1"
+	},
+	"dependencies": {
+		"@effectai/sdk": "0.3.56",
+		"@nuxt/content": "^2.12.1",
+		"@nuxt/image": "1.4.0",
+		"@tanstack/query-persist-client-core": "^5.29.0",
+		"@tanstack/vue-query": "^5.29.0",
+		"@types/node": "^20.6.0",
+		"@vueuse/nuxt": "^10.4.1",
+		"@wharfkit/session": "^1.2.8",
+		"@wharfkit/transact-plugin-autocorrect": "^1.2.0",
+		"@wharfkit/wallet-plugin-anchor": "^1.0.0",
+		"@wharfkit/wallet-plugin-cleos": "^1.0.0",
+		"@wharfkit/wallet-plugin-privatekey": "^1.1.0",
+		"@wharfkit/wallet-plugin-scatter": "^1.0.2",
+		"@wharfkit/wallet-plugin-tokenpocket": "^1.0.2",
+		"@wharfkit/wallet-plugin-wombat": "^1.0.2",
+		"@wharfkit/web-renderer": "^1.0.3",
+		"nuxt": "^3.11.1",
+		"vue-final-modal": "^4.5.4"
+	}
 }
