--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"lint": "bun biome lint --apply .",
 		"format": "biome format --write .",
 		"check": "bun biome check --apply ."
+	        "build:digitalocean": "npx -y bun install && nuxt generate",
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.7.0",
