Add full package-lock.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"lint": "bun biome lint --apply .",
 		"format": "biome format --write .",
 		"check": "bun biome check --apply .",
-		"build:digitalocean": "npx -y bun install && nuxt generate"
+		"build:digitalocean": "nuxt generate"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.7.0",
