Make eos network configurable

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 
 # RPC endpoint for the blockchain
 BASE_EXPLORER_URL = 'https://jungle4.eosq.eosnation.io/'
+EOS_NETWORK = 'jungle4'
 
 # Duration in milliseconds to cache the campaign data
 CAMPAIGN_CACHE_DURATION_MS = '600000'
