--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
+EOS_NETWORK = 'eos'
 BASE_EXPLORER_URL = 'https://bloks.io'
 ALTERNATIVE_FRONTEND_URL = 'https://effectai.github.io/force-frontend'
 # set to 'false' to disable access key requirement
