add csl of requesters for display

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,9 @@
 EOS_NETWORK = 'eos'
 BASE_EXPLORER_URL = 'https://bloks.io'
 ALTERNATIVE_FRONTEND_URL = 'https://effectai.github.io/force-frontend'
+
 # set to 'false' to disable access key requirement
 EARLY_ALPHA_ACCESS_TEMPLATE_ID = '11539'
+
+# comma seperated list of authorized requesters
+AUTHORIZED_REQUESTERS = 'efxtothemoon'
