--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
 		"stylelint-config-recommended": "^14.0.0",
 		"stylelint-config-recommended-vue": "^1.5.0",
 		"stylelint-prettier": "^5.0.0",
-		"vite-plugin-inspect": "^0.8.3",
-		"vite-plugin-stylelint": "^5.3.1"
+		"vite-plugin-inspect": "^0.8.3"
 	},
 	"dependencies": {
+		"vite-plugin-stylelint": "^5.3.1",
 		"@effectai/sdk": "2.0.1",
 		"@nuxt/content": "^2.12.1",
 		"@nuxt/image": "1.4.0",
